[package]
name = "bwmpq"
version = "0.1.0"
edition = "2021"

[dependencies]
stormlib-bindings = { git = "ssh://git@github.com/zzlk/stormlib-bindings.git" }

anyhow = { version = "*", features = ["backtrace"] }
scopeguard = "*"
lazy_static = "*"
tracing = "*"
tempfile = { version = "*" }

[dev-dependencies]
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "*"
