[package]
name = "bwmpq"
version = "0.1.0"
edition = "2021"

[dependencies]
stormlib-bindings = { git = "https://github.com/zzlk/stormlib-bindings" }

anyhow = { version = "*", features = ["backtrace"] }
scopeguard = "*"
lazy_static = "*"
tracing = "*"
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.3", default-features = false, features = ["json", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "*"
futures = "*"
futures-util = "*"
